ui fix and text chages

--- a/GDPR.html
+++ b/GDPR.html
@@ -176,7 +176,7 @@
                         <h4  class=" head_theme fontGraphikSemibold"> Introduction</h4>
                    
                         <p class="p fontLatoRegular">
-                            <a href="index.html">Crayond.com</a> firmly committed to protecting and respecting the privacy of its customers and their end-users. We are mindful and compliant with applicable laws and regulations of data collection and processing in accordance with global data privacy, data security and EU General Data Protection Regulation (GDPR) guidelines.
+                            <a href="index.html">Crayond.com</a> is firmly committed to protecting and respecting the privacy of its customers and their end-users. We are mindful and compliant with applicable laws and regulations of data collection and processing in accordance with global data privacy, data security and EU General Data Protection Regulation (GDPR) guidelines.
                         </p>
                     </div>
                     
