--- a/glossary.html
+++ b/glossary.html
@@ -162,7 +162,7 @@
     <!-- end -->
     <!--Product Defined-->
     <div class="container-fluid text-center product-head">
-        <h1>Sass Glossary</h1>
+        <h1>SaaS Glossary</h1>
         <h3 id="scroll">
             <!-- Create, prototype, collaborate and turn your ideas into product with Crayond -->
         </h3>
