--- a/ourapproach.html
+++ b/ourapproach.html
@@ -106,7 +106,7 @@
         <img src="./images/Crayon'd-New-Website-Loader.gif" alt="Crayon'd" srcset="./images/Crayon'd-New-Website-Loader.gif">
     </section> -->
     <!-- Main header -->
-    <div class="header" id="navBar">
+    <div class="header" id="navBar" style="background-color: transparent;box-shadow: none;position: absolute;" >
         <div class="container">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="row">
