--- a/who-we-are.html
+++ b/who-we-are.html
@@ -1140,12 +1140,12 @@
                     >
                     <div class="col-lg-5  col-md-7" style="display: flex;justify-content: space-between;padding-left: 0px;padding-right: 0px;">
                         <div class="privacy col-xs-6">
-                            <a href="privacy.html" style="color: #43434b;" class="pri" target="__blank">
+                            <a href="/privacy" style="color: #43434b;" class="pri">
                                 <p class="fontGraphikRegular"  style="cursor: pointer;margin: 16px 0px;font-size: 14px;padding-right:18px;border-right: 1px solid rgba(25, 34, 79, 0.08);">Privacy</p>
                             </a>
                         </div>
                         <div class="gdpr col-xs-6">
-                            <a href="GDPR.html" style="color: #43434b;" class="pri" target="__blank">
+                            <a href="/gdpr" style="color: #43434b;" class="pri" >
                                 <p class="fontGraphikRegular" style="cursor: pointer;margin: 16px 0px;font-size: 14px;">GDPR</p>
                             </a>
                         </div>
@@ -1193,12 +1193,12 @@
             <div class="container " >
                 <div class="row response-xs" style="display: none;">
                 <div class="privacy col-sm-6 col-xs-6">
-                    <a href="privacy.html" style="color: #43434b;" class="pri1" target="__blank">
+                    <a href="/privacy" style="color: #43434b;" class="pri1" >
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">Privacy</p>
                     </a>
                 </div>
                 <div class="gdpr col-sm-6 col-xs-6">
-                    <a href="GDPR.html" style="color: #43434b;" class="pri" target="__blank">
+                    <a href="/gdpr" style="color: #43434b;" class="pri" >
                         <p class="fontGraphikRegular" style="cursor: pointer;margin-top:0px;font-size: 14px;">GDPR</p>
                     </a>
                 </div>
