--- a/who-we-are.html
+++ b/who-we-are.html
@@ -116,10 +116,10 @@
                             <div class="dropdown">
                                 
                                 <a id="blog" href="https://www.crayond.com/blog"> Blog</a>
-                                <a id="glossary" href="glossary.html">Glossary</a>
+                                <a id="glossary" href="./glossary">Glossary</a>
                             </div>
                         </span>
-                        <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
+                        <span><a class="fontLatoRegular" href="./contact">Contact</a></span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-3 sign_btn">
                         <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'" >TALK TO US</button>
@@ -152,7 +152,7 @@
             <li class="menu-item" id="nav-toggle"><a target="_blank">Resources<i class="fa fa-caret-down" style="margin-left:10px;" aria-hidden="true"></i></a>
             </li>
             <li  class="sub-menu"><a href="https://www.crayond.com/blog">Blog</a></li>
-            <li  class="sub-menu"><a href="glossary.html">Glossary</a></li>
+            <li  class="sub-menu"><a href="./glossary">Glossary</a></li>
             
             <li class="menu-item"><a href="./contact">Contact</a>
             </li>
