--- a/index.html
+++ b/index.html
@@ -577,6 +577,50 @@
         </div>
     </section>
     <!-- end -->
+    <!-- Quick Facts -->
+    <div class="quick_facts container-fluid">
+        <section class="container   text-center">
+        <p class="fontGraphikRegular facts_head">We’ve  achieved  something…</p>
+        <h3 class="fontGraphikSemibold">
+            Quick Facts
+        </h3>
+        <p class=" fontLatoRegular facts-para">Get support with a large platform, flesh out your first MVP, go from concept to investment, or take your startup to the next level. We’re here to support your unique business needs.</p>
+        <div class="row">
+            <div class="col-lg-3 col-md-6">
+                <div class="containers">
+                    <h4 class="fontGraphikSemibold">100+</h4>
+                    <p class="card-subhead">
+                        products
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="containers">
+                    <h4 class="fontGraphikSemibold">20+</h4>
+                    <p class="card-subhead">
+                        MVP's
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="containers">
+                    <h4 class="fontGraphikSemibold">15+</h4>
+                    <p class="card-subhead">
+                        Domains
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-6">
+                <div class="containers">
+                    <h4 class="fontGraphikSemibold">5+</h4> 
+                    <p class="card-subhead">
+                    Countries
+                    </p>
+                </div>
+            </div>  
+        </div>
+        </section>
+    </div>
     <!-- next_billion -->
     <section class="next_billion">
         <img alt="oval" src="./images/oval.png" class="ovel" />
