--- a/index.html
+++ b/index.html
@@ -584,6 +584,9 @@
         <h3 class="fontGraphikSemibold">
             Quick Facts
         </h3>
+        <div class="hr">
+        
+        </div>
         <p class=" fontLatoRegular facts-para">Get support with a large platform, flesh out your first MVP, go from concept to investment, or take your startup to the next level. We’re here to support your unique business needs.</p>
         <div class="row">
             <div class="col-lg-3 col-md-6">
