--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
     <!-- site ahrefs-site-verification -->
     <meta name="google-site-verification" content="BL_WGjx2P7RKPxbZSfsjN5qa2GDuCzu3_MLQ6yYZrN4" />
+    <meta name="ahrefs-site-verification" content="11e94c2e9775fda1d13ea86dec3c2b8de72ac7d67266d640dc9d273dd3cddc4c">
 
 
 </head>
