--- a/ebooks.html
+++ b/ebooks.html
@@ -80,7 +80,7 @@
                     <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 logo_area">
                         <a href="/" class="logo" alt="crayond" ><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
-                    <div class="col-12 col-xs-12 col-ms-12 col-md-6 col-lg-6 col-xl-6 header_menu">
+                    <div class="col-12 col-xs-12 col-ms-12 col-md-7 col-lg-7 col-xl-6 header_menu">
                         <span ><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
                         <span ><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular" href="/products">Products</a><tag>NEW</tag></span>
@@ -93,7 +93,7 @@
                         </span>
                         <span><a class="fontLatoRegular" href="/contact">Contact</a></span>
                     </div>
-                    <div class="col-6 col-xs-6 col-ms-6 col-md-3 col-lg-3 col-xl-3 sign_btn">
+                    <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-3 sign_btn">
                         <button class="btn btn-outline-primary fontLatoBlack" onclick="window.location.href = './contact'" >TALK TO US</button>
                     </div>
                 </div>
@@ -144,9 +144,9 @@
         <div class="row">
             <div class="col-lg-6 col-md-6">
                 <div class="ebook-content col-lg-10">
-                    <h4 class="fontLatoRegular">SaaS Cheat Sheet</h4>
-                    <h1 class="fontGraphikRegular">The Ultimate - cohort analysis cheat sheet.</h1>
-                    <h4 class="fontLatoRegular">Design sprint - Solve big problems and test new ideas in just five days…
+                    <!-- <h4 class="fontLatoRegular">SaaS Cheat Sheet</h4> -->
+                    <h1 class="fontGraphikRegular">Design Sprint— The Ultimate Guide.</h1>
+                    <h4 class="fontLatoRegular">From idea to prototype— validate your product-idea to start developing, in just 5 days!
                     </h4>
                     <div class="reponse-img">
                         <img src="./images/spirint.png" alt="" class="img-fluid sm">
@@ -218,12 +218,11 @@
                 </div>
                 <div class="col-lg-6 col-md-6 lists pr-5 pl-0">
                     <ul class="pr-5">
-                        <li class="fontLatoRegular">The definition of a personalization engine</li>
-                        <li class="fontLatoRegular">The state of the market and key trends</li>
-                        <li class="fontLatoRegular">The evaluation criteria and quadrant descriptions</li>
-                        <li class="fontLatoRegular">Which vendors were categorized as Leaders,
-                            Challengers, Visionaries, and Niche Players </li>
-                        <li class="fontLatoRegular">Why Dynamic Yield was named a Leader</li>
+                        <li class="fontLatoRegular">Step-by-step guidance to implement the design sprint in any organization.</li>
+                        <li class="fontLatoRegular">Why Design Sprint is a versatile tool and how it solves any problem.</li>
+                        <li class="fontLatoRegular">From prototype to product— getting clarity on what you should build.</li>
+                        <li class="fontLatoRegular">Understanding the importance of testing and validating ideas.</li>
+                        <li class="fontLatoRegular">Design Sprint as a compass for aspiring entrepreneurs/ startup owners.</li>
                     </ul>
                 </div>
             </div>
