--- a/ebooks.html
+++ b/ebooks.html
@@ -149,7 +149,7 @@
                     <h4 class="fontLatoRegular">From idea to prototype— validate your product-idea to start developing, in just 5 days!
                     </h4>
                     <div class="reponse-img">
-                        <img src="./images/spirint.png" alt="" class="img-fluid sm">
+                        <img src="./images/design-sprint.png" alt="" class="img-fluid sm">
                     </div>
                     <div class="buttons d-flex justify-content-between">
                         <button class="btn pdf "><img src="./images/pdf.jpg" class="img-fluid pd mr-3 pb-1">Download
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="col-lg-6  col-md-6  right-bg pb-1 ">
-                <img src="./images/spirint.png" alt="" class="img-fluid  sm">
+                <img src="./images/design-sprint.png" alt="" class="img-fluid  sm">
             </div>
         </div>
     </div>
