--- a/ebooks.html
+++ b/ebooks.html
@@ -143,7 +143,7 @@
     <div class="container ebook">
         <div class="row">
             <div class="col-lg-6 col-md-6">
-                <div class="ebook-content col-lg-11">
+                <div class="ebook-content col-lg-12">
                     <!-- <h4 class="fontLatoRegular">SaaS Cheat Sheet</h4> -->
                     <h1 class="fontGraphikBold">Design Sprint— The Ultimate Guide.</h1>
                     <h4 class="fontLatoRegular">From idea to prototype— validate your product-idea to start developing, in just 5 days!
@@ -151,7 +151,7 @@
                     <div class="reponse-img">
                         <img src="./images/design_sprint.png" alt="" class="img-fluid sm">
                     </div>
-                    <div class="buttons d-flex justify-content-between">
+                    <div class="buttons d-flex justify-content-start">
                         <button class="btn pdf "><a href="#report"><img src="./images/pdf.jpg" class="img-fluid pd mr-3 pb-1">Download Report</a></button>
                         <button class="btn inside"><a href="#what-inside">What is Inside?</a></button>
                     </div>
