--- a/ebooks.html
+++ b/ebooks.html
@@ -142,8 +142,8 @@
 
     <div class="container ebook">
         <div class="row">
-            <div class="col-lg-6 col-md-6">
-                <div class="ebook-content col-lg-12">
+            <div class="col-lg-6 col-md-5">
+                <div class="ebook-content col-lg-12 col-md-12 p-md-0">
                     <!-- <h4 class="fontLatoRegular">SaaS Cheat Sheet</h4> -->
                     <h1 class="fontGraphikBold">Design Sprint— The Ultimate Guide.</h1>
                     <h4 class="fontLatoRegular">From idea to prototype— validate your product-idea to start developing, in just 5 days!
@@ -157,7 +157,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6  col-md-6  right-bg pb-1 ">
+            <div class="col-lg-6  col-md-7  right-bg pb-1 ">
                 <img src="./images/design_sprint.png" alt="" class="img-fluid  sm">
             </div>
         </div>
