carousal_ui_fixed

--- a/ebooks.html
+++ b/ebooks.html
@@ -725,7 +725,7 @@
 
     function largeScreen(y) {
         debugger
-        if (y.matches) { // If media query matches
+        if (y.matches) {
             $(Document).ready(function () {
         $("#img2").click(function () {
             $(".span2").addClass("active");
@@ -741,14 +741,14 @@
             $(".img-2").hide();
             $(".img-2").animate({ left: -15, top: 15 }, 80);
             $(".img-2").hide();
-            $(".img-2").animate({ left: 40, top: -25, opacity: "show" }, 100);
+            $(".img-2").animate({ left: 33, top: -18, opacity: "show" }, 100);
             $(".img-2").removeClass("src", "./images/gather-1.jpg");
             $(".img-2").removeAttr("src", "./images/index.png");
             $(".img-2").attr("src", "./images/gather-2.jpg");
             $(".img-3").hide();
             $(".img-3").animate({ left: -35, top: 35 }, 80);
             $(".img-3").hide();
-            $(".img-3").animate({ left: 64, top: -50, opacity: "show" }, 100);
+            $(".img-3").animate({ left: 51, top: -36, opacity: "show" }, 100);
             $(".img-3").removeClass("src", "./images/index.png");
             $(".img-3").removeAttr("src", "./images/gather-2.jpg");
             $(".img-3").attr("src", "./images/gather-1.jpg");
@@ -757,7 +757,7 @@
             $(".span1").addClass("active");
             $(".span2").removeClass("active");
             $(".span3").removeClass("active");
-            $(".img-1").animate({ left: 40, top: -25, opacity: "hide" }, 100);
+            $(".img-1").animate({ left: 33, top: -18, opacity: "hide" }, 100);
             $(".img-1").animate({ left: 0, top: 0, opacity: "show" }, 200);
             setTimeout(function () {
                 $(".img-1").removeAttr("src", "./images/index.png");
@@ -767,14 +767,14 @@
             $(".img-2").hide();
             $(".img-2").animate({ left: -15, top: 15 }, 80);
             $(".img-2").hide();
-            $(".img-2").animate({ left: 40, top: -25, opacity: "show" }, 100);
+            $(".img-2").animate({ left: 33, top: -18, opacity: "show" }, 100);
             $(".img-2").removeAttr("src", "./images/gather-1.jpg");
             $(".img-2").removeAttr("src", "./images/gather-2.jpg");
             $(".img-2").attr("src", "./images/index.png");
             $(".img-3").hide();
             $(".img-3").animate({ left: -35, top: 35 }, 80);
             $(".img-3").hide();
-            $(".img-3").animate({ left: 64, top: -50, opacity: "show" }, 100);
+            $(".img-3").animate({ left: 51, top: -36, opacity: "show" }, 100);
             $(".img-3").removeAttr("src", "./images/gather-1.jpg");
             $(".img-3").removeAttr("src", "./images/index.png");
             $(".img-3").attr("src", "./images/gather-2.jpg");
@@ -783,7 +783,7 @@
             $(".span3").addClass("active");
             $(".span2").removeClass("active");
             $(".span1").removeClass("active");
-            $(".img-1").animate({ left: 40, top: -25, opacity: "hide" }, 100);
+            $(".img-1").animate({ left: 33, top: -18, opacity: "hide" }, 100);
             $(".img-1").animate({ left: 0, top: 0, opacity: "show" }, 200);
             setTimeout(function () {
                 $(".img-1").removeAttr("src", "./images/index.png");
@@ -793,14 +793,14 @@
             $(".img-2").hide();
             $(".img-2").animate({ left: -15, top: 15 }, 80);
             $(".img-2").hide();
-            $(".img-2").animate({ left: 40, top: -25, opacity: "show" }, 100);
+            $(".img-2").animate({ left: 33, top: -18, opacity: "show" }, 100);
             $(".img-2").removeAttr("src", "./images/index.png");
             $(".img-2").removeAttr("src", "./images/gather-2.jpg");
             $(".img-2").attr("src", "./images/gather-1.jpg");
             $(".img-3").hide();
             $(".img-3").animate({ left: -35, top: 35 }, 80);
             $(".img-3").hide();
-            $(".img-3").animate({ left: 64, top: -50, opacity: "show" }, 100);
+            $(".img-3").animate({ left: 51, top: -36, opacity: "show" }, 100);
             $(".img-3").removeAttr("src", "./images/gather-1.jpg");
             $(".img-3").removeAttr("src", "./images/gather-2.jpg");
             $(".img-3").attr("src", "./images/index.png");
@@ -817,19 +817,19 @@
             $(button_a).removeClass("active");
 
 
-            $(".img-1").animate({ left: 40, top: -25, opacity: "hide" }, 100);
+            $(".img-1").animate({ left: 33, top: -18, opacity: "hide" }, 100);
             $(".img-1").animate({ left: 0, top: 0, opacity: "show" }, 200);
             $(".img-3").hide();
             $(".img-3").animate({ left: -35, top: 35 }, 80);
             $(".img-3").hide();
-            $(".img-3").animate({ left: 64, top: -50, opacity: "show" }, 100);
+            $(".img-3").animate({ left: 51, top: -36, opacity: "show" }, 100);
             $(".img-3").removeClass("src", a);
             $(".img-3").removeAttr("src", c);
             $(".img-3").attr("src", b);
             $(".img-2").hide();
             $(".img-2").animate({ left: -15, top: 15 }, 80);
             $(".img-2").hide();
-            $(".img-2").animate({ left: 40, top: -25, opacity: "show" }, 100);
+            $(".img-2").animate({ left: 33, top: -18, opacity: "show" }, 100);
             $(".img-2").removeClass("src", a);
             $(".img-2").removeAttr("src", c);
             $(".img-2").attr("src", a);
@@ -865,19 +865,19 @@
             $(button_b).removeClass("active");
             $(button_a).removeClass("active");
 
-            $(".img-1").animate({ left: 40, top: -25, opacity: "hide" }, 100);
+            $(".img-1").animate({ left: 33, top: -18, opacity: "hide" }, 100);
             $(".img-1").animate({ left: 0, top: 0, opacity: "show" }, 200);
             $(".img-3").hide();
             $(".img-3").animate({ left: -35, top: 35 }, 80);
             $(".img-3").hide();
-            $(".img-3").animate({ left: 64, top: -50, opacity: "show" }, 100);
+            $(".img-3").animate({ left: 51, top: -36, opacity: "show" }, 100);
             $(".img-3").removeClass("src", a);
             $(".img-3").removeAttr("src", c);
             $(".img-3").attr("src", a);
             $(".img-2").hide();
             $(".img-2").animate({ left: -15, top: 15 }, 80);
             $(".img-2").hide();
-            $(".img-2").animate({ left: 40, top: -25, opacity: "show" }, 100);
+            $(".img-2").animate({ left: 33, top: -18, opacity: "show" }, 100);
             $(".img-2").removeClass("src", a);
             $(".img-2").removeAttr("src", c);
             $(".img-2").attr("src", c);
