--- a/Saas_metric.html
+++ b/Saas_metric.html
@@ -250,7 +250,7 @@
 
 
                 <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
-                    <div class="row card_inside" id="card5" style="margin-top: 30px;">
+                    <div class="row card_inside" id="card5" >
                         <div class="col-7">
                             <p class="head_title">Net Promoter Score <a class="a_detail">(NPS)</a></p>
                             <p class=" read_article1">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
@@ -286,7 +286,7 @@
                 </div>
 
                 <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
-                    <div class="row card_inside" id="card7" style="margin-top:30px">
+                    <div class="row card_inside" id="card7" >
                         <div class="col-8">
                             <p class="head_title">Average Revenue Per Account <a class="a_detail">(ARPA)</a></p>
                             <p class="read_article7">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
@@ -391,7 +391,7 @@
 
 
                 <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
-                    <div class="row card_inside" id="card13" style="margin-top:30px">
+                    <div class="row card_inside" id="card13" >
                         <div class="col-8">
                             <p class="head_title">Annual Recurring Revenue <a class="a_detail">(ARR)</a></p>
                             <p class="read_article13">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
