--- a/Saas_metric.html
+++ b/Saas_metric.html
@@ -102,7 +102,7 @@
                         <span><a class="fontLatoRegular" href="/who-we-are">Who We Are</a></span>
                         <span><a class="fontLatoRegular" href="/ourapproach">Our Approach</a> </span>
                         <span style="position: relative;padding: 10px 15px 10px 0px;"><a class="fontLatoRegular"
-                                href="/products">Products</a>
+                                 href="/products">Products</a>
                             <tag>NEW</tag>
                         </span>
                         <span class="span-position"><a class="fontLatoRegular resources" target="_blank">Resources</a>
@@ -178,14 +178,14 @@
                 <div class="dotted_line"><img src="images/line-2.png" alt=""></div>
             </div>
         </div>
-        <div class="college_cards" id="content_card" style="height: auto;padding-left:15px">
+        <div class="college_cards" id="content_card" style="height: auto;">
             <div class="row">
                 <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
                     <div class="row card_inside">
                         <div class="col-7">
                             <p class="head_title">Customer Retention Rate <a class="a_detail">(CRR)</a></p>
                             <p class=" read_article">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-5">
                             <div><img class="svg_right" src="images/dottedsvg.svg" alt="dottedsvg"></div>
@@ -197,12 +197,12 @@
                 </div>
                 <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
                     <div class="row card_inside" id="card2">
-                        <div class="col-8">
+                        <div class="col-7">
                             <p class="head_title">Burn Rate</p>
                             <p class="read_article1">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-5">
                             <div><img class="svg_right1" src="images/topsvg.svg" alt=""></div>
                             <div>
                                 <p class="number1">02</p>
@@ -215,7 +215,7 @@
                         <div class="col-7">
                             <p class="head_title">Customer Engagement Score <a class="a_detail">(CES)</a></p>
                             <p class=" read_article">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-5">
                             <div><img class="svg_right3" src="images/leftonly.svg" alt="dottedsvg"></div>
@@ -234,7 +234,7 @@
                         <div class="col-8">
 
                             <p class="read_article1">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-4">
 
@@ -254,7 +254,7 @@
                         <div class="col-7">
                             <p class="head_title">Net Promoter Score <a class="a_detail">(NPS)</a></p>
                             <p class=" read_article1">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-5">
                             <div><img class="svg_right3" src="images/fullround.svg" alt="leftonly"></div>
@@ -274,7 +274,7 @@
                         <div class="col-8">
 
                             <p class="read_article1">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-4">
 
@@ -290,7 +290,7 @@
                         <div class="col-8">
                             <p class="head_title">Average Revenue Per Account <a class="a_detail">(ARPA)</a></p>
                             <p class="read_article7">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-4">
                             <div><img class="svg_right7" src="images/leftonly.svg" alt=""></div>
@@ -303,12 +303,12 @@
 
                 <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
                     <div class="row card_inside" id="card8" style="margin-top:30px">
-                        <div class="col-9">
+                        <div class="col-7">
                             <p class="head_title">Lead Velocity Rate <a class="a_detail">(LVR)</a></p>
                             <p class=" read_article8">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
-                        <div class="col-3">
+                        <div class="col-5">
                             <div><img class="svg_right8" src="images/topsvg.svg" style="fill:#135F40 ;" alt="dottedsvg">
                             </div>
                             <div>
@@ -324,7 +324,7 @@
                         <div class="col-8">
                             <p class="head_title">Monthly Recurring Revenue <a class="a_detail">(CRR)</a></p>
                             <p class=" read_article">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-4">
                             <div><img class="svg_right" src="images/dottedsvg.svg" alt="dottedsvg"></div>
@@ -342,7 +342,7 @@
                         </div>
                         <div class="num col-9">
                             <p class="read_article10">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-3">
 
@@ -357,7 +357,7 @@
                         <div class="col-7">
                             <p class="head_title">Average Resolution Time <a class="a_detail">(ART)</a></p>
                             <p class=" read_article1">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-5">
                             <div><img class="svg_right3" src="images/fullround.svg" alt="leftonly"></div>
@@ -375,7 +375,7 @@
                         </div>
                         <div class=" num col-9">
                             <p class="read_article12">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
 
                         <div class="col-3">
@@ -392,12 +392,12 @@
 
                 <div class="col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
                     <div class="row card_inside" id="card13" >
-                        <div class="col-8">
+                        <div class="col-7">
                             <p class="head_title">Annual Recurring Revenue <a class="a_detail">(ARR)</a></p>
                             <p class="read_article13">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
-                        <div class="col-4">
+                        <div class="col-5">
                             <div><img class="svg_right13" src="images/leftonly.svg" alt=""></div>
                             <div>
                                 <p class="number13">13</p>
@@ -414,7 +414,7 @@
                         <div class="col-8">
 
                             <p class=" read_article14">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-4">
 
@@ -430,7 +430,7 @@
                         <div class="col-8">
                             <p class="head_title">Customer Acquisition Cost <a class="a_detail">(CAC)</a></p>
                             <p class=" read_article15">Read Article &nbsp;&nbsp;<i class="fa fa-arrow-right"
-                                    aria-hidden="true" style="font-size:13px"></i></p>
+                                    aria-hidden="true" class="fafaicons"></i></p>
                         </div>
                         <div class="col-4">
                             <div><img class="svg_right" src="images/dottedsvg.svg" alt="dottedsvg"></div>
