--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                     <img alt="Emtax" class="brands_logos img2" src="./images/Emtax.svg" style="width: 124px;">
                     <img alt="Zibahub" class="brands_logos img3" src="./images/Zibahub.svg" style="width: 80px;">
                     <img alt="pyt-logo" class="brands_logos img4" src="./images/pyt-logo.svg" style="width: 160px">
+                    <img alt="Pinecrow" class="brands_logos img5" src="./images/csk_logo.svg" style="width: 90px;">
                     <img alt="Pinecrow" class="brands_logos img5" src="./images/Pinecrow.svg" style="width: 140px;">
                 </div>   
                 <marquee behavior="scroll" direction="left" scrollamount="3" style="display: none;">
@@ -200,6 +201,7 @@
                     <img alt="Emtax" class="brands_logos" src="./images/Emtax.svg" style="width: 124px;">
                     <img alt="Zibahub" class="brands_logos" src="./images/Zibahub.svg" style="width: 80px;">
                     <img alt="pyt-logo" class="brands_logos" src="./images/pyt-logo.svg" style="width: 160px">
+                    <img alt="Pinecrow" class="brands_logos" src="./images/csk_logo.svg" style="width: 90px;">
                     <img alt="Pinecrow" class="brands_logos" src="./images/Pinecrow.svg" style="width: 140px;">
                 </marquee>
             </div>
