compile warnings cleared

--- a/Customer_retention.html
+++ b/Customer_retention.html
@@ -436,7 +436,7 @@
                         Net Promoter Score (NPS)
                     </h4>
                     <div class="dotted_line" style="position:relative;bottom:15px;"><img src="images/line-2.png"
-                            style="" alt="">
+                             alt="">
                     </div>
                     <p class=" head_imp fontGraphikSemibold ">What is Net Promoter Score (NPS)?
                     </p>
@@ -478,7 +478,7 @@
 
                     </h4>
                     <div class="dotted_line" style="position:relative;bottom:15px;"><img src="images/line-2.png"
-                        style="" alt="">
+                         alt="">
                 </div>
                     <p class=" head_imp fontGraphikSemibold ">What is Customer Lifetime Value?
 
@@ -521,7 +521,7 @@
                         Average Revenue Per Account (ARPA)
                     </h4>
                     <div class="dotted_line" style="position:relative;bottom:15px;"><img src="images/line-2.png"
-                        style="" alt="">
+                         alt="">
                 </div>
 
                     <p class=" head_imp fontGraphikSemibold ">What is Average Revenue Per Account (ARPA)?
