--- a/Saas_metric.html
+++ b/Saas_metric.html
@@ -312,7 +312,8 @@
 
 
 
-                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4"style="position: relative;
+                bottom: 10px;">
                     <div class="row card_inside" id="card5" >
                         <div class="col-7">
                             <p class="head_title">Net Promoter Score <a class="a_detail">(NPS)</a></p>
@@ -381,7 +382,9 @@
                     </div>
                 </div>
 
-                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4" style="    position: relative;
+                bottom: 14px;
+            ">
                     <div class="row card_inside" id="card7" >
                         <div class="col-8">
                             <p class="head_title">Average Revenue Per Account <a class="a_detail">(ARPA)</a></p>
@@ -411,7 +414,9 @@
                     </div>
                 </div>
 
-                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4" style="    position: relative;
+                bottom: 10px;
+            ">
                     <div class="row card_inside" id="card8" style="margin-top:30px">
                         <div class="col-7">
                             <p class="head_title">Lead Velocity Rate <a class="a_detail">(LVR)</a></p>
@@ -474,7 +479,9 @@
                     </div>
                 </div>
 
-                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4"style="position: relative;
+                bottom: 40px;
+            ">
                     <div class="row card_inside" id="card10" style="margin-top: 30px;">
                         <div class="col-10">
                             <p class="head_title">Revenue Churn Rate <a class="a_detail">(RCR)</a></p>
@@ -509,7 +516,8 @@
                     </div>
                 </div>
 
-                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4" style="position: relative;
+                bottom: 10px;">
                     <div class="row card_inside" id="card11" style="margin-top: 30px;">
                         <div class="col-7">
                             <p class="head_title">Average Resolution Time <a class="a_detail">(ART)</a></p>
@@ -524,7 +532,7 @@
                         </div>
                     </div>
                 </div>
-                <div class=" mobiletab col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                <div class=" mobiletab col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4" >
                     <div class="row card_inside" id="card11" style="margin-top: 30px;">
                         <div class="col-7">
                             <p class="head_title">Average Resolution Time <a class="a_detail">(ART)</a></p>
@@ -539,7 +547,8 @@
                     </div>  
                 </div>
 
-                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4"style="position: relative;
+                bottom: 41px;">
                     <div class="row card_inside" id="card12">
                         <div class="col-12">
                             <p class="head_title">Customer churn</p>
@@ -578,7 +587,8 @@
 
 
 
-                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4" style="position: relative;
+                bottom: 50px;">
                     <div class="row card_inside" id="card13" >
                         <div class="col-7">
                             <p class="head_title">Annual Recurring Revenue <a class="a_detail">(ARR)</a></p>
@@ -645,7 +655,8 @@
                     </div>
                 </div>
 
-                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                <div class=" webview col-6 col-xs-6 col-sm-6 col-md-4 col-lg-4" style="position: relative;
+                bottom: 75px;">
                     <div class="row card_inside" id="card15">
                         <div class="col-8">
                             <p class="head_title">Customer Acquisition Cost <a class="a_detail">(CAC)</a></p>
