--- a/Saas_metric.html
+++ b/Saas_metric.html
@@ -206,7 +206,7 @@
                         </div>
                         <div class="col-5">
                             <div class="arrow_crr">
-                                <a  href="customerretention.html"style="color:white;" >  <i class="fa fa-chevron-right" style="font-size: 10px;" aria-hidden="true"></i></a>
+                                <a  href="articles/customerretention.html"style="color:white;" >  <i class="fa fa-chevron-right" style="font-size: 10px;" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
