worked on changes while onclick

--- a/Customer_retention.html
+++ b/Customer_retention.html
@@ -182,7 +182,7 @@
 
             <div id="right_side_content" class="right_side col-sm-2  col-md-5  col-lg-4  hidden-xs">
                 <div class="head_right1 fontGraphikSemibold">
-                    <a  href="Saas_metric.html"style="color:#6f42c1;"><img src="images/left-arrow.svg">&nbsp;&nbsp;&nbsp;Back</a>
+                    <a  href="/Saas_metric.html"style="color:#6f42c1;"><img src="images/left-arrow.svg">&nbsp;&nbsp;&nbsp;Back</a>
                 </div>
 
 
