--- a/saas-metrics/customer-churn.html
+++ b/saas-metrics/customer-churn.html
@@ -23,9 +23,9 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#334ac0">
 
-    <title>Crayon'd | Breathe Life Into Your Product idea</title>
+    <title>What is Customer Churn? | Learn Customer Churn | Crayond</title>
     <meta name="description"
-        content="We help startup founders and businesses across the globe to craft their ideas into world-class products.">
+        content="Measures the percentage of customers that have not paid for your product during a certain time frame.">
     <link rel="canonical" href="https://www.crayond.com/" />
 
     <!-- Og meta dates -->
@@ -136,7 +136,7 @@
             margin-top: 8px;
             font-size: 27px;
             left: 11px;"
-        }><a href="/Saas_metric.html"> <i class="fa fa-chevron-left" style="font-size: 13px;color:grey;" aria-hidden="true"></i></a></div>
+        }><a href="/saas-metrics.html"> <i class="fa fa-chevron-left" style="font-size: 13px;color:grey;" aria-hidden="true"></i></a></div>
             <a href="/" class="logo" alt="crayond" style="margin: auto;"><img width="134px" alt="logo-crayond"
                     src="/images/logo-crayond@2x.jpg" />&nbsp;</a>
         </div>
@@ -172,7 +172,7 @@
             <ul class="menu mobile_menu_close" style="padding: 0; width: 50px; border-radius: 50px; margin: auto;">
                 <li class="menu-item">
                     <a>
-                        <img src="./images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
+                        <img src="/images/close.svg" alt="menuclose" style="padding-bottom: 4px;" />
                     </a>
                 </li>
             </ul>
@@ -187,7 +187,7 @@
 
             <div id="right_side_content" class="right_side col-sm-2  col-md-5  col-lg-4  hidden-xs">
                 <div class="head_right1 fontGraphikSemibold">
-                    <a  href="/Saas_metric.html"style="color:#6f42c1;"><img src="/images/left-arrow.svg">&nbsp;&nbsp;&nbsp;Back</a>
+                    <a  href="/saas-metrics.html"style="color:#6f42c1;"><img src="/images/left-arrow.svg">&nbsp;&nbsp;&nbsp;Back</a>
                 </div>
 
 
@@ -196,58 +196,57 @@
                     <div class="head_right fontGraphikSemibold">
                         Here's Jump to Metric
                     </div>
-
                     <div class=" row  linksz menu1 fontLatoRegular " id="linksz" onclick="scrollWin('id1', 0)">
-                        <span class="cb-factor__item_1" id="item1"> </span><a class="article_ref" href="customerretention.html" > 1.Customer Retention Rate</a>
+                        <span class="cb-factor__item_1" id="item1"> </span><a class="article_ref" href="customer-retention-rate.html" > 1.Customer Retention Rate</a>
                     </div>
-                    <div class="  row linksz   menu2 fontLatoRegular" id="linksz" onclick="scrollWin('id2', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span><a class="article_ref" href="Burnrate.html" >  2.Burn Rate</a>
+                    <div class="  row linksz   menu2 fontLatoRegular" id="linksz"  onclick="scrollWin('id2', 0)">
+                        <span class="cb-factor__item_1" id="item1"></span><a class="article_ref" href="Burn-rate.html" >  2.Burn Rate</a>
                     </div>
                     <div class="  row linksz  menu3  fontLatoRegular" id="linksz" onclick="scrollWin('id3', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span><a class="article_ref" href="customerengagement.html" >3.Customer Engagement Score</a> 
+                        <span class="cb-factor__item_1" id="item1"></span><a class="article_ref" href="customer-engagement-score.html" >3.Customer Engagement Score</a> 
                     </div>
                     <div class="  row linksz   menu4 fontLatoRegular" id="linksz" onclick="scrollWin('id4', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="viralcoefficient.html" > 4.Viral Coefficient</a> 
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="viral-coefficient.html" > 4.Viral Coefficient</a> 
 
                     </div>
-                    <div class="  row linksz   menu5 fontLatoRegular" id="linksz"   onclick="scrollWin('id5', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="Netpromoter.html" style="color:#665CD7;" > 5.Net Promoter Score</a>
+                    <div class="  row linksz   menu5 fontLatoRegular" id="linksz" onclick="scrollWin('id5', 0)">
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="Net-promoter-score.html" > 5.Net Promoter Score</a>
 
                     </div>
                     <div class="  row linksz  menu6  fontLatoRegular" id="linksz" onclick="scrollWin('id6', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customerlifetime.html" > 6.Customer Lifetime Value</a> 
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-lifetime-value.html" > 6.Customer Lifetime Value</a> 
                     </div>
                     <div class="  row linksz  menu7  fontLatoRegular" onclick="scrollWin('id7', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="averagerevenue.html" > 7.Average Revenue Per Account</a> 
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="average-revenue-per-account.html" > 7.Average Revenue Per Account</a> 
 
                     </div>
                     <div class="  row linksz  menu8  fontLatoRegular" id="linksz" onclick="scrollWin('id8', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="leadvelocity.html" > 8.Lead Velocity Rate</a> 
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="lead-velocity-rate.html" > 8.Lead Velocity Rate</a> 
 
                     </div>
                     <div class="  row linksz  menu9  fontLatoRegular" id="linksz" onclick="scrollWin('id9', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span>  <a class="article_ref" href="monthlyrecurring.html" >9.Monthly Recurring Revenue</a>
+                        <span class="cb-factor__item_1" id="item1"></span>  <a class="article_ref" href="monthly-recurring-revenue.html" >9.Monthly Recurring Revenue</a>
 
                     </div>
                     <div class="  row linksz  menu10  fontLatoRegular" id="linksz" onclick="scrollWin('id10', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="revenuechurn.html" > 10.Revenue Churn Rate</a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="revenue-churn.html" > 10.Revenue Churn Rate</a>
 
                     </div>
                     <div class="  row linksz   menu11 fontLatoRegular" id="linksz" onclick="scrollWin('id11', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span>  <a class="article_ref" href="avreageresolution.html" >11.Average Resolution Time</a>
+                        <span class="cb-factor__item_1" id="item1"></span>  <a class="article_ref" href="average-resolution-time.html" >11.Average Resolution Time</a>
 
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id12', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customerchurn.html" > 12.Customer churn </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html"  style="color:#665CD7;"> 12.Customer churn </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id13', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="annualrecurring.html" > 13.Annual Recurring Revenue </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="annual-recurring-revenue.html" > 13.Annual Recurring Revenue </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id14', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="productqualifiedleads.html" > 14.Product Qualified Leads </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="product-qualified-leads.html" > 14.Product Qualified Leads </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id15', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customeracqisationcost.html" > 15.Customer Acquisition Cost </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-acqisation-cost.html" > 15.Customer Acquisition Cost </a>
                     </div>
                 </div>
             </div>
@@ -255,51 +254,66 @@
             <div class=" left col-sm-10 col-md-7  col-lg-7">
                 <!-- left side of content -->
 
-               
-                <div id="id5" class="head_theme">
-                    <h4 class="head_theme fontGraphikSemibold">
-                        Net Promoter Score (NPS)
-                    </h4>
-                    <div class="dotted_line" style="position:relative;bottom:15px;"><img src="/images/line-2.png"
-                             alt="">
-                    </div>
-                    <p class=" head_imp fontGraphikSemibold ">What is Net Promoter Score (NPS)?
-                    </p>
-                    <p class="p fontLatoRegular" style="color:#7B6A77">
-                        The metric that lets you measure customer satisfaction and loyalty. It puts them into three
-                        types: passive, detractors, and promoters.
+                <div class="head_theme">
+                <h4 id="id12" class="head_theme fontGraphikSemibold">
+                    Customer churn
+                </h4>
+                <div class="dotted_line" style="position:relative;bottom:15px;"><img src="/images/line-2.png"
+                    style="width:160px;height: 2px;" alt="">
+            </div>
+                </p>
+                <p class=" head_imp fontGraphikSemibold ">What is Customer Churn?
 
 
-
-                    </p>
-                    <p class=" head_imp fontGraphikSemibold ">Why is it important?
-                    </p>
-                    <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Shows how well a customer would recommend your product<br />
-                        0 means they’d never <br />
-                        10 means they’re very likely<br />
-                        Overall, the higher your NPS, the more satisfied the customer is.<br />
+                </p>
+                <p class="p fontLatoRegular" style="color:#7B6A77">
+                    The percentage of customers that have not paid for your product during a certain time frame
 
 
+                </p>
+                </p>
+                <p class=" head_imp fontGraphikSemibold ">Why is Customer Churn Important?
 
-                    </p>
-                    <p class=" head_imp fontGraphikSemibold ">How to calculate your Net Promoter Score?
 
-                    </p>
-                    <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Take surveys— Ask them to directly rate how likely they are to tell someone about your
-                        product<br />
-                        Segregate— Detractors are 0-6, Passives are 7-8, and Promoters are 9-10<br />
-                        Get your overall NPS by subtracting the percentage of detractors from that of the
-                        promoters.<br />
-                        % of Detractors (minus) % of Promoters = Overall NPS<br />
+                </p>
+                <p class="p fontLatoRegular" style="color:#7B6A77">
+                    At the very least, it takes 5x more money to acquire a new customer than to retain one.
+                    Managing customer churn would help you:
+                    Save customer acquisition costs
+                    Focus on long-term retention and recurring profits
+                    Increasing profitability with lesser efforts
+                    Understand users’ pain-points
 
-                    </p>
-                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customerlifetime.html'">
-                        <div class=" col-7 bottom_next"style="float:right;right:0 ;position:absolute;">
+
+                </p>
+                </p>
+                <p class=" head_imp fontGraphikSemibold ">To Calculate Customer Churn
+
+
+                </p>
+                <p class="p fontLatoRegular" style="color:#7B6A77">
+                    Select a time period, generally a month or a quarter
+                    Note down the no. of new customers during this period
+                    Note down the no. of customers lost during this period
+                    Divide Acquired Customers with Lost Customers, and multiply that answer with 100.
+                    (Acquired Customers / Lost Customers) * 100
+
+                </p>
+                </p>
+                <p class=" head_imp fontGraphikSemibold ">Tips to reduce Customer Churn
+
+                </p>
+                <p class="p fontLatoRegular" style="color:#7B6A77">
+                    Invest in training your support and sales reps
+                    Make a great first impression with customers
+                    Open up multiple avenues for user feedback
+                    Constantly fix issues in your product<p/>
+
+                    <div class="row mobilebottom" style="display:none" onclick ="window.location.href='annualrecurring.html'" >
+                        <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
                           <div class="row" style="border-left: 3px solid #665CD7;">
                               <div class="col-10">
-                              <b style="padding-left:4px;">Customer Lifetime </b> <b style="padding-left:4px;">  Value</b>
+                              <b style="padding-left:4px;">Annual &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b> <b style="padding-left:4px;">Recurring Revenue</b>
                      </div>
                       
                           <div class="col-2"style="top:10px;padding:0px">
@@ -311,7 +325,9 @@
           </div>
 
 
+                    <br />
                 </div>
+            </div>
     </div>
     </div>
     </div>
